--- a/src/App.css
+++ b/src/App.css
@@ -219,7 +219,7 @@ html, body {
 
   /* MOBILE: page push-down */
   .page-wrapper {
-    padding-top: 150px;
+    padding-top: 0 !important;   /* remove the white block */
   }
 
   /* MOBILE HEADER FIXED (ONLY HERE) */
@@ -249,6 +249,8 @@ html, body {
   .logo-image {
     height: 70px;
   }
+  .page-wrapper {
+    padding-top: 20px !important;
 }
 
 /* ======================= */
@@ -381,8 +383,4 @@ html, body {
 }
 
 /* REMOVE WHITE GAP BEHIND HEADER ON ALL MOBILE SCREENS */
-@media (max-width: 992px) {
-  .page-wrapper {
-    padding-top: 0 !important;   /* remove the white block */
-  }
-}
+
